# hyperliquid-trading-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/: __init__.py  hyperliquid_client.py
src/hyperliquid_trading_mcp/: app.py  auth.py  hyperliquid_client.py  indicators.py  models.py  risk_manager.py  server.py  settings.py
src/hyperliquid_trading_mcp/tools/: __init__.py  account.py  market.py  meta.py  orders.py  risk.py  settings_tools.py
tests/: conftest.py  test_auth.py  test_client_init.py  test_indicators.py  test_risk_manager.py  test_rounding.py  test_server_startup.py  test_settings.py  test_tools_dryrun.py  test_tools_live.py
